<resources>
    <string name="app_name">SliceMaster</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_name">Nombre</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_sign_up_short">Registrarse</string>
    <string name="action_save">Guardar</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Contraseña debe tener mas de 5 caracteres.</string>
    <string name="login_failed">¡Falló ingreso!</string>
    <string name="sign_up_failed">¡Falló registro!</string>
    <string name="invalid_display_name">Nombre invalido</string>
    <string name="add">add</string>
    <string name="prompt_product_name">Name</string>
    <string name="prompt_product_ingredients">Ingredients</string>
    <string name="prompt_product_price">Price</string>
    <string name="title_register">Registro</string>
    <string name="title_product">Detalle de Producto</string>
    <string name="title_list_product">Productos</string>
    <string name="description_product">Descripción</string>
    <string name="actions_product">Acciones</string>
    <string name="dialog_title">Confirmar Borrado</string>
    <string name="dialog_message">¿Está seguro de eliminar el registro?</string>
    <string name="dialog_confirm">Si</string>
    <string name="fetch_failed">¡Falla! No es posible mostrar los datos.</string>
    <string name="create_successful">Registro almacenado con éxito</string>
    <string name="create_failed">¡Falla! Registro no almacenado</string>
    <string name="update_successful">Actualización exitosa</string>
    <string name="update_failed">¡Falla! Registro no actualizado</string>
    <string name="delete_successful">Registro eliminado.</string>
    <string name="delete_failed">¡Falla! Registro no fué eliminado</string>
    <string name="details_name">Nombre</string>
    <string name="details_ingredients">Ingredientes</string>
    <string name="details_price">Precio</string>
    <string name="search_hint">Buscar por ingrediente</string>
</resources>
